Notebook cleanup, Add permanent infer_image() function, update run_eval_real.py to use infer_image()

--- a/BlockB_Starter_Colab.ipynb
+++ b/BlockB_Starter_Colab.ipynb
@@ -18,6 +18,19 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "74e45bd2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Verify Colab path\n",
+        "import os\n",
+        "assert os.path.isdir('/content/stg-system-main'), \"\u274c Repo not found at /content/stg-system-main. Re-clone before running.\"\n",
+        "print('\u2705 Repo path verified. You can now run all cells top-to-bottom.')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "c8899252",
       "metadata": {},
       "outputs": [],
@@ -158,20 +171,6 @@
         "print(\"CMP_ROOT contains:\", len(list(Path(CMP_ROOT).glob('*.jpg'))) + len(list(Path(CMP_ROOT).glob('*.png'))), \"images\")\n",
         "!ls -1 \"$CMP_ROOT\" | head\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "4ea00bae",
-      "metadata": {},
-      "source": "## 6) Runner wiring check\n`run_eval_real.py` already shells out to `stg-stsg-model/src/infer_v1.py`, so no manual patching is required. Use the cell below only if you need to verify the file contents in this runtime."
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "e37f5cc1",
-      "metadata": {},
-      "outputs": [],
-      "source": "#@title Verify run_eval_real.py wiring\nfrom pathlib import Path\n\nrunner = Path(ROOT) / \"stg-real-eval/src/run_eval_real.py\"\ntext = runner.read_text()\nif 'infer_v1.py' in text and 'infer_image' not in text:\n    print('\u2705 Runner already wired to CLI (no action needed).')\nelse:\n    print('\u26a0\ufe0f Runner still references infer_image. Pull latest repo or reapply the patch manually.')\n"
     },
     {
       "cell_type": "markdown",
