--- a/BlockB_Starter_Colab.ipynb
+++ b/BlockB_Starter_Colab.ipynb
@@ -78,6 +78,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "id": "5df35340",
+      "source": [
+        "#@title Install feature extractors (CLIP/MiDaS/DINO/SAM)",
+        "%pip -q install ftfy regex tqdm",
+        "%pip -q install git+https://github.com/openai/CLIP.git",
+        "import torch, os",
+        "print(\"Torch:\", torch.__version__, \"CUDA:\", torch.cuda.is_available())",
+        "# Allow git-based torch.hub downloads in Colab",
+        "os.environ[\"TORCH_HOME\"] = \"/content/torch_hub\"",
+        "os.makedirs(os.environ[\"TORCH_HOME\"], exist_ok=True)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "ad937a14",
       "metadata": {},
@@ -135,6 +152,21 @@
         "(out_path:=cfg_path).write_text(yaml.safe_dump(cfg))\n",
         "print(\"Wrote CMP path into:\", out_path)\n",
         "print(Path(out_path).read_text())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "id": "1c648c28",
+      "source": [
+        "#@title Verify dataset paths",
+        "import os",
+        "print(\"CMP_ROOT:\", CMP_ROOT, \"exists:\", os.path.isdir(CMP_ROOT))",
+        "print(\"CITYSCAPES_SEQ_ROOT:\", CITYSCAPES_SEQ_ROOT, \"exists:\", os.path.isdir(CITYSCAPES_SEQ_ROOT))",
+        "print(\"CITYSCAPES_STILL_ROOT:\", CITYSCAPES_STILL_ROOT, \"exists:\", os.path.isdir(CITYSCAPES_STILL_ROOT))",
+        "print(\"NUSCENES_ROOT:\", NUSCENES_ROOT, \"exists:\", os.path.isdir(NUSCENES_ROOT))"
       ]
     },
     {
@@ -197,6 +229,37 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "id": "a425a773",
+      "source": "By default all four extractors run (CLIP, DINO, MiDaS, SAM).\nTo limit which ones are extracted during development, set the environment variable `STG_FEATURES` before the run, e.g.:\n```python\nimport os\nos.environ['STG_FEATURES'] = 'clip,dino'\n```\nIf present, the scripts will only cache those features."
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "id": "84aa9a37",
+      "source": [
+        "#@title Run CMP with real feature cache (Phase 2A)",
+        "%cd $ROOT",
+        "# Ensure CMP config points to current path",
+        "import yaml",
+        "from pathlib import Path",
+        "cfg_path = Path(\"stg-real-eval/configs/block_b_cmp.yaml\")",
+        "cfg = yaml.safe_load(cfg_path.read_text())",
+        "cfg[\"paths\"][\"root\"] = CMP_ROOT",
+        "cfg_path.write_text(yaml.safe_dump(cfg))",
+        "",
+        "# Run evaluation (this will populate cache/block_b/... with .npy feature files)",
+        "!python stg-real-eval/src/run_eval_real.py --config stg-real-eval/configs/block_b_cmp.yaml",
+        "",
+        "print(\"",
+        "Cache preview:\")",
+        "!find cache/block_b -maxdepth 3 -type f | head -n 20"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "e5e51890",
       "metadata": {},
       "source": "## 8) Optional sanity test on Cityscapes demo subset\nThis cell runs the subset selector to copy a few frames from the `demoVideo` split and tests the pipeline."
@@ -208,6 +271,20 @@
       "metadata": {},
       "outputs": [],
       "source": "#@title Create and test a Cityscapes demo subset\n%cd $ROOT\n\nCITYSCAPES_DEMO = CITYSCAPES_SEQ_ROOT\nDEST_SUBSET = \"/content/stg-real-eval/datasets/cityscapes_subset\"\n\n!python stg-real-eval/src/scripts/select_cityscapes_subset.py --root \"$CITYSCAPES_DEMO\" --num_towns 1 --num_frames 10 --dest \"$DEST_SUBSET\"\n\n# Patch config to use the subset as seq_root\nimport yaml\nfrom pathlib import Path\ncfg_path = Path(ROOT) / \"stg-real-eval/configs/block_b_cityscapes.yaml\"\ncfg = yaml.safe_load(cfg_path.read_text())\ncfg[\"paths\"][\"seq_root\"] = DEST_SUBSET\ncfg_path.write_text(yaml.safe_dump(cfg))\n\nprint(\"Running Block B pipeline on the subset...\")\n!python stg-real-eval/src/run_eval_real.py --config stg-real-eval/configs/block_b_cityscapes.yaml\n\n# Visualize subset contents (first 3 frames)\nfrom IPython.display import Image, display\nsubset_imgs = sorted(list(Path(DEST_SUBSET).glob(\"**/*.png\")))[:3]\nfor im in subset_imgs:\n    display(Image(filename=str(im)))\nprint(f\"Displayed {len(subset_imgs)} images from subset.\")\n"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": null,
+      "outputs": [],
+      "id": "195229a2",
+      "source": [
+        "#@title Cache sanity check",
+        "import os",
+        "print(\"Torch Hub home:\", os.environ.get(\"TORCH_HOME\", \"(default)\"))",
+        "!du -sh cache/block_b || echo \"No cache yet\"",
+        "!find cache/block_b -maxdepth 2 -type d -print"
+      ]
     }
   ],
   "metadata": {},
