Simplified and Executable Notebook Update for Phase 2A

--- a/BlockB_Starter_Colab.ipynb
+++ b/BlockB_Starter_Colab.ipynb
@@ -84,14 +84,16 @@
       "outputs": [],
       "id": "5df35340",
       "source": [
-        "#@title Install feature extractors (CLIP/MiDaS/DINO/SAM)",
-        "%pip -q install ftfy regex tqdm",
-        "%pip -q install git+https://github.com/openai/CLIP.git",
-        "import torch, os",
-        "print(\"Torch:\", torch.__version__, \"CUDA:\", torch.cuda.is_available())",
-        "# Allow git-based torch.hub downloads in Colab",
-        "os.environ[\"TORCH_HOME\"] = \"/content/torch_hub\"",
-        "os.makedirs(os.environ[\"TORCH_HOME\"], exist_ok=True)"
+        "#@title Install feature extractors (CLIP / MiDaS / DINO / SAM)\n",
+        "%pip -q install ftfy regex tqdm\n",
+        "%pip -q install git+https://github.com/openai/CLIP.git\n",
+        "\n",
+        "import torch, os\n",
+        "print(\"Torch:\", torch.__version__, \"CUDA available:\", torch.cuda.is_available())\n",
+        "\n",
+        "# Allow git-based torch.hub downloads in Colab\n",
+        "os.environ[\"TORCH_HOME\"] = \"/content/torch_hub\"\n",
+        "os.makedirs(os.environ[\"TORCH_HOME\"], exist_ok=True)\n"
       ]
     },
     {
@@ -161,12 +163,12 @@
       "outputs": [],
       "id": "1c648c28",
       "source": [
-        "#@title Verify dataset paths",
-        "import os",
-        "print(\"CMP_ROOT:\", CMP_ROOT, \"exists:\", os.path.isdir(CMP_ROOT))",
-        "print(\"CITYSCAPES_SEQ_ROOT:\", CITYSCAPES_SEQ_ROOT, \"exists:\", os.path.isdir(CITYSCAPES_SEQ_ROOT))",
-        "print(\"CITYSCAPES_STILL_ROOT:\", CITYSCAPES_STILL_ROOT, \"exists:\", os.path.isdir(CITYSCAPES_STILL_ROOT))",
-        "print(\"NUSCENES_ROOT:\", NUSCENES_ROOT, \"exists:\", os.path.isdir(NUSCENES_ROOT))"
+        "#@title Verify dataset paths\n",
+        "import os\n",
+        "print(\"CMP_ROOT:\", CMP_ROOT, \"exists:\", os.path.isdir(CMP_ROOT))\n",
+        "print(\"CITYSCAPES_SEQ_ROOT:\", CITYSCAPES_SEQ_ROOT, \"exists:\", os.path.isdir(CITYSCAPES_SEQ_ROOT))\n",
+        "print(\"CITYSCAPES_STILL_ROOT:\", CITYSCAPES_STILL_ROOT, \"exists:\", os.path.isdir(CITYSCAPES_STILL_ROOT))\n",
+        "print(\"NUSCENES_ROOT:\", NUSCENES_ROOT, \"exists:\", os.path.isdir(NUSCENES_ROOT))\n"
       ]
     },
     {
@@ -240,22 +242,20 @@
       "outputs": [],
       "id": "84aa9a37",
       "source": [
-        "#@title Run CMP with real feature cache (Phase 2A)",
-        "%cd $ROOT",
-        "# Ensure CMP config points to current path",
-        "import yaml",
-        "from pathlib import Path",
-        "cfg_path = Path(\"stg-real-eval/configs/block_b_cmp.yaml\")",
-        "cfg = yaml.safe_load(cfg_path.read_text())",
-        "cfg[\"paths\"][\"root\"] = CMP_ROOT",
-        "cfg_path.write_text(yaml.safe_dump(cfg))",
-        "",
-        "# Run evaluation (this will populate cache/block_b/... with .npy feature files)",
-        "!python stg-real-eval/src/run_eval_real.py --config stg-real-eval/configs/block_b_cmp.yaml",
-        "",
-        "print(\"",
-        "Cache preview:\")",
-        "!find cache/block_b -maxdepth 3 -type f | head -n 20"
+        "#@title Run CMP with real feature cache (Phase 2A)\n",
+        "%cd $ROOT\n",
+        "\n",
+        "import yaml\n",
+        "from pathlib import Path\n",
+        "cfg_path = Path(\"stg-real-eval/configs/block_b_cmp.yaml\")\n",
+        "cfg = yaml.safe_load(cfg_path.read_text())\n",
+        "cfg[\"paths\"][\"root\"] = CMP_ROOT\n",
+        "cfg_path.write_text(yaml.safe_dump(cfg))\n",
+        "\n",
+        "!python stg-real-eval/src/run_eval_real.py --config stg-real-eval/configs/block_b_cmp.yaml\n",
+        "\n",
+        "print(\"\\nCache preview:\")\n",
+        "!find cache/block_b -maxdepth 3 -type f | head -n 20\n"
       ]
     },
     {
@@ -279,11 +279,11 @@
       "outputs": [],
       "id": "195229a2",
       "source": [
-        "#@title Cache sanity check",
-        "import os",
-        "print(\"Torch Hub home:\", os.environ.get(\"TORCH_HOME\", \"(default)\"))",
-        "!du -sh cache/block_b || echo \"No cache yet\"",
-        "!find cache/block_b -maxdepth 2 -type d -print"
+        "#@title Cache sanity check\n",
+        "import os\n",
+        "print(\"Torch Hub home:\", os.environ.get(\"TORCH_HOME\", \"(default)\"))\n",
+        "!du -sh cache/block_b || echo \"No cache yet\"\n",
+        "!find cache/block_b -maxdepth 2 -type d -print\n"
       ]
     }
   ],
